# Rf-PIQA

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: CI.yml
configs/: example-evaluation-swinv2-tiny-PIVEN-distillation.yaml  example-training-swinv2-tiny-PIVEN-distillation.yaml  example-training-swinv2-tiny-PIVEN-teacher.yaml
scripts/: evaluation.py  training-student.py  training-teacher.py
src/Rf_PIQA/datasets/: common.py  example.py
src/Rf_PIQA/nn/common/: predintervals.py
src/Rf_PIQA/nn/heads/: point.py  predintervals.py
src/Rf_PIQA/nn/losses/: predintervals.py
src/Rf_PIQA/nn/student/: model.py
src/Rf_PIQA/nn/teacher/: collation.py  model.py  processing.py
src/Rf_PIQA/training/: student.py  teacher.py
